# introduccion_vue

./: README.md  index.html  package-lock.json  package.json
Desktop/kinro/: .gitignore  alembic.ini  package.json  pyproject.toml  readme.md  requirements.txt  run.bat
Desktop/kinro/alembic/: env.py
Desktop/kinro/backend/: alembic.ini  config.py  create_tables.py  crud.py  database.py  main.py  models.py  schemas.py
Desktop/kinro/backend/routes/: attributes.py  classes.py  connections.py  data.py  properties.py
Desktop/kinro/frontend/: package.json
Desktop/kinro/frontend/src/: App.css  App.js  api.js  index.js  layout.js
Desktop/kinro/frontend/src/components/: AddAttributeModal.js  AttributeList.js  ClassContextMenu.js  ClassDiagram.js  ClassModal.js  ConfirmationModal.js  CustomConnectionLine.js  CustomNode.js  DataGridModal.js  EdgeContextMenu.js  EditAttributeModal.js  FloatingEdge.js  Flow.js  Graph.js  ManageAttributesModal.js  UploadExcelModal.js
Desktop/kinro/frontend/src/constants/: dataTypes.js  propertyOptions.js
Desktop/kinro/frontend/src/hooks/: useConfirmation.js
Desktop/kinro/frontend/src/pages/: HomePage.js
src/: App.vue  __VLS_template.js
